# SerdaBot

./: .git-cleanup-list.txt  .gitignore  .pylintrc  ALPHA_CHECKLIST.md  AUTOMOD_SETUP.md  BUILD.md  CHANGELOG.md  COMMANDS.md  DOCUMENTATION_INDEX.md  HOTFIX_WINDOWS_STREAM.md  INSTALL.md  INSTALL_WINDOWS.md  LICENSE  LIVE_TEST_TODO.md  MIGRATION_tools_to_src.md  PROJECT_STRUCTURE.md  PROJECT_WHITELIST.md  PROJECT_WHITELIST.md:Zone.Identifier  PyLintreport.txt  QUICK_START.md  RAWG_QUICK_START.md  README.md  RELEASE_v0.1.0.md  SESSION_RECAP.md  SESSION_RECAP_FINAL.md  SESSION_RECAP_ROUTING.md  TEST_MOD_POWERS.md  VALIDATION_FINALE.md  all_git_files.txt  all_local_files.txt  bruteforce_clean_git_repo.sh  bruteforce_clean_git_repo.sh:Zone.Identifier  build.ps1  cleanrepo.sh  code_review_prompt.txt  comparison_results.txt  create_review_archive_fixed.sh  dev-requirements.txt  dev_cleanup_safe.sh  gitignore  (+24 more)
.github/: dependabot.yml
.github/prompts/: Kiss-Mode.prompt.md  claude4.5-1.prompt.md
.github/workflows/: ci.yml
KissBot/: .gitignore  ARCHITECTURE_OPTIMIZATIONS.md  CHANGELOG.md  COMMANDS.md  COMPLETE_API_SETUP_GUIDE.md  DOCUMENTATION_TECHNIQUE.md  GREAT_DOCUMENTATION_MIGRATION.md  IMPLEMENTATION_SMART_PERSONALITY.md  INSTALL_EASY.md  OLLAMA_LINUX_SETUP.md  ORGANISATION.md  PRODUCTION_CHECKLIST.md  QUANTUM_ANOMALY_AUDIT.md  QUANTUM_ARCHITECTURE_DOC.md  QUICK_START.md  README.md  TEST_TRANSLATION_GUIDE.md  TRANSLATION_DESIGN.md  TWITCH_SETUP_GUIDE.md  bot.py  config.yaml.example  config.yaml.template  config_loader.py  install.ps1  install.sh  main.py  pytest.ini  quick-install.ps1  quick-install.sh  requirements-dev.txt  requirements.txt  start_kissbot.ps1  start_kissbot.sh  validate_config.py
KissBot/assets/: GALLERY.md
KissBot/backends/: __init__.py  game_cache.py  game_lookup.py  quantum_game_cache.py
KissBot/commands/: __init__.py  game_commands.py  quantum_commands.py  quantum_game_commands.py  translation.py  utils_commands.py
KissBot/config/: quantum_config.yaml
KissBot/core/: __init__.py  cache.py  cache_interface.py  handlers.py  quantum_cache.py  rate_limiter.py
KissBot/data/: devs_whitelist.json
KissBot/demos/: quantum_demo.py
KissBot/docs/: ARCHITECTURE_UNIFIEE.md  INDEX.md  PIPELINE_ANALYSIS.md  QUANTUM_SYSTEM.md  SMART_PERSONALITY.md
KissBot/intelligence/: __init__.py  auto_translate.py  commands.py  core.py  events.py  handler.py
KissBot/kissbot-venv/: pyvenv.cfg
KissBot/scripts/: health_monitor.py  warmup_cache.py
KissBot/test/: README.md  benchmark_report.txt  benchmark_report_v2.txt  benchmark_results.json  benchmark_results_v2.json  run_benchmark.sh
KissBot/tests/: __init__.py  conftest.py  final_validation_summary.py  validate_quantum_pipeline.py
TODO-DEV/: BENCHMARK_RAM_COOLDOWNS.md  HEARTBEAT_VS_RETRY.md  INTEGRATION_NOUVELLES_COMMANDES.md  OPTIMISATIONS.md  OPTIMISATIONS_PRIORITAIRES.md  README.md  REFONTE_GAMEINFO_RECAP.md  game-search.md
auto-tune/: README.md  find_max_concurrent.py
config/: model_limits.json  quotes.json  roast.json  tools_registry.json
data/: blocked_sites.json  devs.json
docs/: AUTOMOD_TWITCH.md  CONFIG_SETUP.md  EASTER_EGG.md  FACT_CACHE_PLAN.md  FACT_CACHE_USAGE.md  HARDWARE_OPTIMIZATION.md  INDEX.md  LLM_FALLBACK.md  MODEL_CONFIG.md  MODEL_OPTIMIZATION.md  MONITORING.md  PROACTIVE_ROUTING.md  PROMPTS.md  QUICK_START.md  RAWG_STRATEGY.md  TODO.md  TRANSLATION.md  TWITCHIO_MIGRATION.md  WORKFLOW_DEV.md
scripts/: benchmark_cache_hardware.py  benchmark_conversation_manager.py  benchmark_rate_limiter.py  compare_1_5b_vs_7b.py  compare_qwen_vs_gpt.py  compare_temperatures.py  crash_test_pipeline.py  smoke_bot.py  smoke_model.py  warmup_cache.py
tests/: __init__.py  conftest.py  test_ask_utils.py  test_cascade_fallback.py  test_clean.py  test_config.py  test_game_utils.py  test_igdb_api.py  test_llm_fallback.py  test_model_performance.py  test_model_utils.py  test_pipeline_integration.py  test_prompt_loader.py  test_quick_wins.py  test_rawg_api.py  test_translator.py
tools/: fix_broken_packages.sh  format_code.sh  install_project.sh  install_translation.sh  pre_build_check.py  quick_test_windows.bat  reload_servers.sh  run_ci_locally.sh  start_servers.sh  stop_servers.sh  test_chat_api.py  test_chatml_ask_v2.py  test_chatml_behavior.py  test_chatml_chill.py  test_env.py  test_igdb.py  uninstall_serdabot.sh
(+143 files in other folders)
