[project]
name = "serda_bot"
version = "0.1.0"
description = "Twitch bot IA powered by mistral + FastAPI"
requires-python = ">=3.10"
dependencies = [
  "httpx",
  "twitchio",
  "requests",
  "PyYAML",
  "fastapi",
  "uvicorn",
  "argostranslate",
  "beautifulsoup4",
  "langdetect",
  "apscheduler",
  "prometheus_client"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["venv", "scripts", "tools"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
include = '\.py$'
exclude = '''
/(
    \.venv
  | venv
  | \.git
  | \.mypy_cache
  | \.pytest_cache
  | __pycache__
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_glob = ["venv/*", "build/*", "dist/*", "__pycache__/*"]

[tool.ruff]
line-length = 88
exclude = ["venv", ".venv", "scripts", "tools", "__pycache__"]

[tool.ruff.lint]
select = ["E", "F", "B", "I"]
ignore = ["E501"]
fixable = ["ALL"]

[tool.ruff.format]
quote-style = "single"               # préfère les guillemets simples pour les strings
indent-style = "space"               # indentation par espaces
skip-magic-trailing-comma = false    # respecte les virgules finales comme Black
line-ending = "auto"                 # détection automatique LF/CRLF
docstring-code-format = true         # reformate les exemples de code dans les docstrings
docstring-code-line-length = "dynamic"  # adapte la largeur aux docstrings environnantes

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.pylint.main]
ignore = ["venv", ".venv", "build", "dist", "__pycache__"]

[tool.pylint."messages control"]
disable = [
    "C0303",  # trailing-whitespace
    "C0301",  # line-too-long (géré par black)
    "C0411",  # wrong-import-order (géré par isort)
    "C0114",  # missing-module-docstring
    "C0115",  # missing-class-docstring
    "C0116",  # missing-function-docstring
    "W0718",  # broad-exception-caught (on sait, c'est documenté)
    "C0415",  # import-outside-toplevel (OK pour les tests)
    "W1514",  # unspecified-encoding (Python 3.10+, pas critique)
    "W0702",  # bare-except (legacy code, à refactor plus tard)
    "W0621",  # redefined-outer-name (normal avec pytest fixtures)
    "E0401",  # import-error (modules optionnels comme ctransformers)
    "W0603",  # global-statement (singleton MODEL voulu)
    "W0602",  # global-variable-not-assigned (lecture seule OK)
    "W1309",  # f-string-without-interpolation (déjà corrigé)
    "W0511",  # fixme (TODO/FIXME comments OK pour tracking)
]

[tool.pylint.format]
max-line-length = 100
